2013-09-XX
  + 2013.09 release
  * Release naming convention is YYYY.MM from now on

  * Kernel 3.9.9 with module signing and BFQ I/O scheduler
  * Support for installation to GPT media
  * Added support for exFAT filesystem
  * Better support for QEMU mouse virtualization
  * Xorg server 1.13
  * Firewire SBP-2 module is blacklisted to prevent Firewire RAM access
  * Reduced the number of SUID binaries via POSIX.1e capabilities

  * Replaced htpdate with NTP for time synchronization
  * Added "tz" boot parameter for RTC timezone specification
  * Added "gentoo=nontp" boot parameter for disabling NTP
  * Added "gentoo=obfs" boot parameter for obfsproxy Tor bridges
  * Added "gentoo=xkms" boot parameter for forcing X modesetting driver
  * More robust Xorg autoconfiguration with sequential fallbacks
  * Added ASCII virtual keyboard table for OTFE password entry

  * Added UFRaw, a RAW images viewer and converter
  * Added proxychains, a heterogeneous chaining proxyfier
  * Removed experimental I2P support and JamVM
  * Removed FBReader due to its transition to Qt
  * Removed Audacious due to plugin location bugs
  * Replaced XChat with HexChat

  * OVA image creation is fully integrated into build process


2012-09-01
  + 2012.3 release

  * Kernel 3.4.7 with overlayfs instead of Unionfs
  * Kernel image is now bundled with initramfs
  * EFI boot binaries are signed for Secure Boot
  * (U)EFI trusted boot chain continues from EFI boot binaries
  * Xorg server 1.12 and Mesa 8.0 with Gallium3D for Radeon cards
  * Nouveau driver is used for Nvidia cards
  * Better support for VMware graphics virtualization

  * Simplified boot parameters handling, most are now omitted
  * Added "blacklist" boot parameter for kernel modules blacklisting
  * Added "bridges" boot parameter for specifying Tor bridges
  * Added "gentoo=noanon" boot parameter for non-anonymous usage mode
  * More rigorous Wi-Fi and Bluetooth (un)blocked states on boot
