@@ -51,32 +51,30 @@ ntfsflags=noatime,nosuid,nodev,compression,usermapping=/etc/ntfs-3g.map
 
 start() {
     mediaro=1
-    if mountpoint -q ${boot}; then
-        # Determine boot device and its label
-        mediadev=/dev/block/`mountpoint -d ${boot}`
-        medialabel=`udevadm info -q property -p ${mediadev} | sed -n 's/^ID_FS_LABEL=//p'`
+    # Determine boot device and its label
+    mediadev=/dev/block/`mountpoint -d ${boot}`
+    medialabel=`udevadm info -q property -p ${mediadev} | sed -n 's/^ID_FS_LABEL=//p'`
 
-        if [ -n "${medialabel}" ]; then
-            # Can result in duplicate autofs entries if label is later changed
-            # to that of other media, and this service is then restarted
-            ebegin "Creating ${boot} -> /media/${medialabel} alias"
-            sed -i "s@^[^#].*\( [^ ]* :${boot}\$\)@\"${medialabel}\"\1@" ${autos}
-            eend $?
-        fi
+    if [ -n "${medialabel}" ]; then
+        # Can result in duplicate autofs entries if label is later changed
+        # to that of other media, and this service is then restarted
+        ebegin "Creating ${boot} -> /media/${medialabel} alias"
+        sed -i "s@^[^#].*\( [^ ]* :${boot}\$\)@\"${medialabel}\"\1@" ${autos}
+        eend $?
+    fi
 
 
-        # Remount media root read-write (for non-loop/cd/dvd)
-        get_bootparam 'readonly' || mediaro=`blockdev --getro ${mediadev} 2>/dev/null` || mediaro=1
-        if [ ${mediaro} = 0 ]; then
-            ebegin Remounting ${boot} read-write
-            mount -o remount,rw ${boot} && /usr/bin/test -w ${boot}
-            mediaro=$?
-            eend ${mediaro}
-        elif [ ! -e ${mediadev} ]; then
-            ewarn Boot media device lost, not remounting
-        else
-            ewarn Boot media is read-only, not remounting
-        fi
+    # Remount media root read-write (for non-cd/dvd)
+    get_bootparam 'readonly' || mediaro=`blockdev --getro ${mediadev} 2>/dev/null` || mediaro=1
+    if [ ${mediaro} = 0 ]; then
+        ebegin Remounting ${boot} read-write
+        mount -o remount,rw ${boot} && /usr/bin/test -w ${boot}
+        mediaro=$?
+        eend ${mediaro}
+    elif [ ! -e ${mediadev} ]; then
+        ewarn Boot media device lost, not remounting
+    else
+        ewarn Boot media is read-only, not remounting
     fi
 
 
@@ -223,9 +221,7 @@ stop() {
 
     # Remount media root read-only
     # (apparently, does not conflict with write cache)
-    if mountpoint -q ${boot}; then
-        ebegin Remounting ${boot} read-only
-        mount -o remount,ro ${boot}
-        eend $?
-    fi
+    ebegin Remounting ${boot} read-only
+    mount -o remount,ro ${boot}
+    eend $?
 }
