@@ -6,3 +6,7 @@ dev-libs/libxml2                python
 
 # net-libs/libsoup circular dependency
 net-libs/libproxy               -networkmanager
+
+# initramfs cryptsetup
+sys-fs/cryptsetup               static      -udev  kernel -gcrypt
+sys-fs/lvm2                     static-libs -udev
