@@ -1,9 +1,9 @@
 ## Variables:
-## VERSION:     distribution version                     (replaced in gen-efi)
-## CONSOLEFONT: PFF2 gfxterm font                        (replaced in gen-efi)
-## FSHASH:      SquashFS image hexadecimal SHA-256 hash  (replaced in mk-boot)
+## VERSION:     distribution version                        (replaced in gen-efi)
+## CONSOLEFONT: PFF2 gfxterm font                           (replaced in gen-efi)
+## FSHASH:      SquashFS DM-Verity hexadecimal SHA-256 hash (replaced in mk-boot)
 ##
-## grub.mf:     kernel+font SHA-256 checksums             (created in mk-boot)
+## grub.mf:     kernel+font SHA-256 checksums                (created in mk-boot)
 ##
 # Regular kernel parameters:
 #     (see syslinux.cfg)
