@@ -1,15 +1,15 @@
 ## Variables
-## VERSION:     distribution version                     (replaced in gen-syslinux)
-## CONSOLEFONT: psf(u) console font                      (replaced in gen-syslinux)
-## FSHASH:      SquashFS image hexadecimal SHA-256 hash  (replaced in mk-boot)
+## VERSION:     distribution version                        (replaced in gen-syslinux)
+## CONSOLEFONT: psf(u) console font                         (replaced in gen-syslinux)
+## FSHASH:      SquashFS DM-Verity hexadecimal SHA-256 hash (replaced in mk-boot)
 ##
-## Encoding:    CP437                                  (translated in gen-syslinux)
+## Encoding:    CP437                                     (translated in gen-syslinux)
 ##
 # Liberté-specific kernel parameters (all are optional):
 #     cdroot_type={auto,vfat,ext4,iso9660,hfsplus,squashfs} - boot media filesystem type
 #     cdroot_flags=...   - boot media mount flags
 #     cdroot=/dev/xxx    - boot media device (can be a glob pattern)
-#     cdroot_hash=<hex>  - verify given SquashFS image hexadecimal SHA-256 hash
+#     cdroot_hash=<blks>:<hex> - SquashFS image DM-Verity hexadecimal SHA-256 root hash
 #     loop=...           - path to SquashFS image on boot media
 #     debug              - pause initramfs before mount probing and before booting
 #     readonly           - set read-only access for boot media device (no OTFE)
